--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ h2 {
 
 h3 {
     color: #fff;
-    text-align:left; /* Alinea los títulos de las secciones a la derecha */
+    text-align:center; /* Alinea los títulos de las secciones a la derecha */
     font-size: 2em; /* Tamaño de los subtítulos */
     line-height: 1.4; /* Espacio entre líneas para subtítulos */
     margin: 0 auto;
@@ -112,7 +112,7 @@ li {
     border-bottom: 1px solid #ccc;
     padding-bottom: 20px;
 
-    text-align: left; /* Alinea el texto a la izquierda en la sección de proyectos */
+    text-align: center; /* Alinea el texto a la izquierda en la sección de proyectos */
 }
 
 
@@ -123,7 +123,7 @@ li {
 
 #projects h4 {
     color: #007bff;
-    text-align: left; /* Centra los títulos de los proyectos */
+    text-align: center; /* Centra los títulos de los proyectos */
     line-height: 1.3; /* Espacio entre líneas para los títulos de los proyectos */
 }
 
@@ -131,7 +131,7 @@ li {
     font-size: 1em;
     line-height: 1.6; /* Espacio entre líneas para el texto de los proyectos */
     color:aliceblue;
-    text-align: left; /* Centra los títulos de los proyectos */
+    text-align: center; /* Centra los títulos de los proyectos */
 }
 
 /* Estilos para la sección 'Habilidades' */
@@ -139,7 +139,7 @@ li {
     list-style-type: none;
     padding: 0;
 
-    text-align: left; /* Alinea el texto a la izquierda en la sección de habilidades */
+    text-align: center; /* Alinea el texto a la izquierda en la sección de habilidades */
     color: aliceblue;
     
 }
@@ -156,7 +156,7 @@ li {
 #contact form {
     max-width: 600px;
     margin: 0 auto;
-    text-align: left; /* Alinea el texto a la izquierda en el formulario de contacto */
+    text-align: center; /* Alinea el texto a la izquierda en el formulario de contacto */
     line-height: 1.6; /* Espacio entre líneas para el formulario de contacto */
     color:aliceblue ;
 }
